Analizador/lexer.java
/* Generated By:JavaCC: Do not edit this line. lexer.java */
package Analizador;

import java.io.FileInputStream;
import java.io.FileNotFoundException;
import java.util.Dictionary;
import java.util.HashMap;
import java.util.ArrayList;

class lexer implements lexerConstants {
   public static HashMap<Integer,Identificador> tablaSimbolos = new HashMap<Integer,Identificador>();
   static int pos=0;
   static String modificadorTemp, tipoDatoTemp, nombreTemp, valorTemp;
   Identificador identificadores;
   static Token modificador;
   static Token tipoDato;
   static ArrayList<Expresion> listaexpresiones = new ArrayList<Expresion>();
        public static void main(String[] args) throws ParseException, FileNotFoundException
        {
                try
                {

                        lexer analizador=new lexer(new FileInputStream("C:\u005c\u005cUsers\u005c\u005cPower\u005c\u005ceclipse-workspace\u005c\u005cProyectoAutomatas\u005c\u005csrc\u005c\u005cAnalizador\u005c\u005cprueba.txt"));
                        //analizador.Start();
                        analizador.programa();
                        System.out.println("****************************************************************************************************");
                        System.out.println("La cadena fue aceptada");
                        System.out.println("Numero de Tokens:"+ tablaSimbolos.size());
                        System.out.println("****************************************************************************************************");
                System.out.println("Impresion de HashMap FINAL:");
                System.out.println("");
                        //Impresion Clase
                        int posclase=tablaSimbolos.size()-1;
                System.out.println("Linea: "+tablaSimbolos.get(posclase).getPos()+" Nombre: "+tablaSimbolos.get(posclase).getNombre()+
                                                ", Tipo: "+tablaSimbolos.get(posclase).getTipo()+
                                                ", Uso: "+tablaSimbolos.get(posclase).getUso()+
                                                ", TipoDato: "+tablaSimbolos.get(posclase).getTipoDato()+
                                                ", Modificador: "+tablaSimbolos.get(posclase).getModificador()+
                                                ", Valor: "+tablaSimbolos.get(posclase).getValor()+
                                                ", Alcance: "+tablaSimbolos.get(posclase).getAlcance());

              //Impresion de los demas Tokens
                          for ( int i = 0; i < tablaSimbolos.size()-1; i ++){
                                System.out.println("Linea: "+tablaSimbolos.get(i).getPos()+" Nombre: "+tablaSimbolos.get(i).getNombre()+
                                                ", Tipo: "+tablaSimbolos.get(i).getTipo()+
                                                ", Uso: "+tablaSimbolos.get(i).getUso()+
                                                ", TipoDato: "+tablaSimbolos.get(i).getTipoDato()+
                                                ", Modificador: "+tablaSimbolos.get(i).getModificador()+
                                                ", Valor: "+tablaSimbolos.get(i).getValor()+
                                                ", Alcance: "+tablaSimbolos.get(i).getAlcance());
                        }
                        for ( int i = 0; i < listaexpresiones.size(); i ++){
                                System.out.println("EXPRESIONES MATEMATICAS INGRESADAS : ");
                                System.out.println("Identificador: "+listaexpresiones.get(i).getIdentificador()+" Expresion: "+listaexpresiones.get(i).getExpresion());
                        }

                }
                catch(ParseException e)
                {

                        System.out.println(e.getMessage());
                        //system.out.println("Se han encontrado errores, fall� al compilar");
                }
        }

/*===== Operadores Logicos  ======*/
  static final public void programa() throws ParseException {
    Token nombre;
    Token modificador;
    try {
      modificador = jj_consume_token(MODIFICADOR);
      jj_consume_token(CLASS);
      nombre = jj_consume_token(IDENTIFICADOR);
      jj_consume_token(LLAVEIZQUIERDA);
      label_1:
      while (true) {
        if (jj_2_1(3)) {
          ;
        } else {
          break label_1;
        }
        sentencia();
      }
      jj_consume_token(LLAVEDERECHA);
         Identificador temp=new Identificador("","","","","","",0,"No aplica");
          temp.setTipo("Clase");
      temp.setUso("Declaracion");
      temp.setTipoDato("No Aplica");
          temp.setNombre(nombre.image);
          temp.setModificador(modificador.image);
          temp.setValor("No aplica");
          temp.setPos(modificador.beginLine);
          tablaSimbolos.put(pos,temp);
          pos++;
    } catch (ParseException e) {
                System.out.println("Error de Sintaxis");
                System.out.println(e.toString());
    }
  }

/*M�todos para field_declaration*/
  static final public void field_declaration() throws ParseException {
    variable_declaration();
  }

  static final public void variable_declaration() throws ParseException {
    modificador = jj_consume_token(MODIFICADOR);
    tipoDato = type();
    variable_declarator();
    jj_consume_token(PUNTOYCOMA);
          Identificador tempgeneral=new Identificador("","","","","","",0,"");
          //System.out.print(tipo.image+ " ");
          //System.out.print(modificador.image+ " ");
          tipoDatoTemp=tipoDato.image;
          modificadorTemp=modificador.image;
          tempgeneral.setPos(modificador.beginLine);
          tempgeneral.setTipo("Variable");
          tempgeneral.setUso("Declaracion");
          tempgeneral.setModificador(modificadorTemp);
          tempgeneral.setTipoDato(tipoDatoTemp);
          tempgeneral.setNombre(nombreTemp);
          tempgeneral.setValor(valorTemp);
          tempgeneral.setAlcance("Global");
           Validacion val=new Validacion();
           val.checarSiExisteToken(tempgeneral);
           val.checarTipoDato(tempgeneral);
           tablaSimbolos.put(pos,tempgeneral);
           pos++;

          //System.out.println("*************");

  }

  static final public void variable_declaration_local() throws ParseException {
    modificador = jj_consume_token(MODIFICADOR);
    tipoDato = type();
    variable_declarator();
    jj_consume_token(PUNTOYCOMA);
          Identificador tempgeneral=new Identificador("","","","","","",0,"Local");
          //System.out.print(tipo.image+ " ");
          //System.out.print(modificador.image+ " ");
           tipoDatoTemp=tipoDato.image;
          modificadorTemp=modificador.image;
          tempgeneral.setPos(modificador.beginLine);
          tempgeneral.setTipo("Variable");
          tempgeneral.setUso("Declaracion");
          tempgeneral.setAlcance("Local");
          tempgeneral.setModificador(modificadorTemp);
          tempgeneral.setTipoDato(tipoDatoTemp);
          tempgeneral.setNombre(nombreTemp);
          tempgeneral.setValor(valorTemp);
           Validacion val=new Validacion();
           val.checarSiExisteToken(tempgeneral);
           val.checarTipoDato(tempgeneral);
           tablaSimbolos.put(pos,tempgeneral);
           pos++;

          //System.out.println("*************");

  }

  static final public Token type() throws ParseException {
        Token tipo;
    tipo = jj_consume_token(TIPODATO);
          {if (true) return tipo;}
    throw new Error("Missing return statement in function");
  }

  static final public void variable_declarator() throws ParseException {
  Token identificador;
  Token valor=null;
  Token valorexpresion=null;
    identificador = jj_consume_token(IDENTIFICADOR);
    jj_consume_token(ASIGNACION);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      valor = jj_consume_token(INTEGER_LITERAL);
      break;
    case BOOLEAN_LITERAL:
      valor = jj_consume_token(BOOLEAN_LITERAL);
      break;
    case DOUBLE_LITERAL:
      valor = jj_consume_token(DOUBLE_LITERAL);
      break;
    case STRING_LITERAL:
      valor = jj_consume_token(STRING_LITERAL);
      break;
    case EXPRESION_REGULAR:
      valorexpresion = jj_consume_token(EXPRESION_REGULAR);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
           //System.out.print(identificador.image + " ");
           //System.out.print(valor.image + " ");
           nombreTemp=identificador.image;
           if(valor==null) {
           valorTemp=valorexpresion.image;
           Triplos.Arbol evaluaexp=new Triplos.Arbol(valorTemp);
           Expresion exptemp=new Expresion();
           exptemp.setIdentificador(nombreTemp);
           exptemp.setExpresion(valorTemp);
           listaexpresiones.add(exptemp);
           }else {
         valorTemp=valor.image;
           }
  }

  static final public void modificacion_variable() throws ParseException {
  Token identificador;
  Token valor;
    identificador = jj_consume_token(IDENTIFICADOR);
    jj_consume_token(ASIGNACION);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      valor = jj_consume_token(INTEGER_LITERAL);
      break;
    case BOOLEAN_LITERAL:
      valor = jj_consume_token(BOOLEAN_LITERAL);
      break;
    case DOUBLE_LITERAL:
      valor = jj_consume_token(DOUBLE_LITERAL);
      break;
    case STRING_LITERAL:
      valor = jj_consume_token(STRING_LITERAL);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(PUNTOYCOMA);
        String identificadorvar=identificador.image;
        String valorvar=valor.image;
        Validacion val=new Validacion();
        val.asignarvariabledentro(identificadorvar,valorvar, identificador.beginLine);
  }

/*Metodos para sentencia*/
  static final public void sentencia() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MODIFICADOR:
      variable_declaration();
      break;
    case IF:
      if_todo();
      break;
    case WHILE:
      while_sentencia();
      break;
    case IDENTIFICADOR:
      modificacion_variable();
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void sentencia_local() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MODIFICADOR:
      variable_declaration_local();
      break;
    case IF:
      if_todo();
      break;
    case WHILE:
      while_sentencia();
      break;
    case IDENTIFICADOR:
      modificacion_variable();
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void if_todo() throws ParseException {
    jj_consume_token(IF);
    if_sentencia();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSEIF:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
      else_if_sentencia();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      else_sentencia();
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
  }

  static final public void if_sentencia() throws ParseException {
    jj_consume_token(PARENTESISIZQUIERDO);
    expression();
    jj_consume_token(PARENTESISDERECHO);
    jj_consume_token(LLAVEIZQUIERDA);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MODIFICADOR:
      case IF:
      case WHILE:
      case IDENTIFICADOR:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_3;
      }
      sentencia_local();
    }
    jj_consume_token(LLAVEDERECHA);
  }

  static final public void else_sentencia() throws ParseException {
    jj_consume_token(ELSE);
    jj_consume_token(LLAVEIZQUIERDA);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MODIFICADOR:
      case IF:
      case WHILE:
      case IDENTIFICADOR:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      sentencia_local();
    }
    jj_consume_token(LLAVEDERECHA);
  }

  static final public void else_if_sentencia() throws ParseException {
    jj_consume_token(ELSEIF);
    if_sentencia();
  }

  static final public void while_sentencia() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(PARENTESISIZQUIERDO);
    expression();
    jj_consume_token(PARENTESISDERECHO);
    jj_consume_token(LLAVEIZQUIERDA);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MODIFICADOR:
      case IF:
      case WHILE:
      case IDENTIFICADOR:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_5;
      }
      sentencia_local();
    }
    jj_consume_token(LLAVEDERECHA);
  }

  static final public void expression() throws ParseException {
    testing_expression();
  }

  static final public void testing_expression() throws ParseException {
   Token nombrecomparacion1=null;
   Token nombrecomparacion2=null;
   Token expresion;
   Token valor1=null;
   Token valor2=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      valor1 = jj_consume_token(INTEGER_LITERAL);
      break;
    case IDENTIFICADOR:
      nombrecomparacion1 = jj_consume_token(IDENTIFICADOR);
      break;
    case DOUBLE_LITERAL:
      valor1 = jj_consume_token(DOUBLE_LITERAL);
      break;
    case BOOLEAN_LITERAL:
      valor1 = jj_consume_token(BOOLEAN_LITERAL);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    expresion = jj_consume_token(EXPRESION);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      valor2 = jj_consume_token(INTEGER_LITERAL);
      break;
    case IDENTIFICADOR:
      nombrecomparacion2 = jj_consume_token(IDENTIFICADOR);
      break;
    case DOUBLE_LITERAL:
      valor2 = jj_consume_token(DOUBLE_LITERAL);
      break;
    case BOOLEAN_LITERAL:
      valor2 = jj_consume_token(BOOLEAN_LITERAL);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         Identificador tempgeneral=new Identificador("","","","","","",0,"");

     Validacion val=new Validacion();
         if(nombrecomparacion1==null && nombrecomparacion2==null) {
         String a=valor1.image;
     String b=valor2.image;
     tempgeneral.setPos(valor1.beginLine);
     val.checarComparacionValores(a,b, valor1.beginLine);
         }
         if(nombrecomparacion1!=null && nombrecomparacion2==null) {
         String valtemp=nombrecomparacion1.image;
         String valtemp2=valor2.image;
         tempgeneral.setPos(nombrecomparacion1.beginLine);
     val.obtenerDatoComparacion(valtemp,valtemp2, nombrecomparacion1.beginLine);
         }
         if(nombrecomparacion1==null && nombrecomparacion2!=null) {
          String valtemp=nombrecomparacion2.image;
         String valtemp2=valor1.image;
         tempgeneral.setPos(nombrecomparacion2.beginLine);
         val.obtenerDatoComparacion2(valtemp,valtemp2,nombrecomparacion2.beginLine);
         }
     if(nombrecomparacion1!=null && nombrecomparacion2!=null) {
          String valtemp=nombrecomparacion1.image;
         String valtemp2=nombrecomparacion2.image;
         tempgeneral.setPos(nombrecomparacion1.beginLine);
         val.obtenerDatoComparacion3(valtemp,valtemp2, nombrecomparacion1.beginLine);
         }

         if(nombrecomparacion1!=null) {
     tempgeneral.setNombre(nombrecomparacion1.image);
     tempgeneral.setTipo("Variable");
     tempgeneral.setTipoDato("Comparacion: "+expresion.image+"  ");
         }else {
     tempgeneral.setNombre("No hay variables");
     tempgeneral.setTipoDato("Comparacion: "  +expresion.image+"  ");
         }
     tempgeneral.setUso("Comparacion");



     //System.out.println(a);

            //val.checarComparacionValores(a,b);

     tablaSimbolos.put(pos,tempgeneral);
         pos++;
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_3R_17() {
    if (jj_scan_token(PARENTESISIZQUIERDO)) return true;
    if (jj_3R_18()) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    if (jj_scan_token(MODIFICADOR)) return true;
    if (jj_3R_15()) return true;
    if (jj_3R_16()) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_6()) return true;
    return false;
  }

  static private boolean jj_3R_9() {
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    if (jj_scan_token(IF)) return true;
    if (jj_3R_17()) return true;
    return false;
  }

  static private boolean jj_3R_10() {
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3R_18() {
    if (jj_3R_19()) return true;
    return false;
  }

  static private boolean jj_3R_19() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(25)) {
    jj_scanpos = xsp;
    if (jj_scan_token(29)) {
    jj_scanpos = xsp;
    if (jj_scan_token(27)) {
    jj_scanpos = xsp;
    if (jj_scan_token(26)) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_14() {
    if (jj_scan_token(IDENTIFICADOR)) return true;
    if (jj_scan_token(ASIGNACION)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(25)) {
    jj_scanpos = xsp;
    if (jj_scan_token(26)) {
    jj_scanpos = xsp;
    if (jj_scan_token(27)) {
    jj_scanpos = xsp;
    if (jj_scan_token(28)) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_16() {
    if (jj_scan_token(IDENTIFICADOR)) return true;
    return false;
  }

  static private boolean jj_3R_13() {
    if (jj_scan_token(WHILE)) return true;
    if (jj_scan_token(PARENTESISIZQUIERDO)) return true;
    if (jj_3R_18()) return true;
    return false;
  }
